@@ -566,6 +566,7 @@ DOC_COMMANDS=\
 	check_dummy \
 	check_drivesize \
 	check_files \
+	check_kernel_stats \
 	check_load \
 	check_memory \
 	check_mount \
